--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mantine/core": "^7.17.2",
     "@mantine/hooks": "^7.17.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
